test/strongUpdates6.slq

def main(){
	x:=(0,[1,2,3]);
	i:=0;
	x[i]=2; // error
	return x[i]; // error
}
